Implementing user registration use case

--- a/src/AtomicFlow.Application/AtomicFlow.Application.csproj
+++ b/src/AtomicFlow.Application/AtomicFlow.Application.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AtomicFlow.Domain\AtomicFlow.Domain.csproj" />
+    <ProjectReference Include="..\AtomicFlow.SharedKernel\AtomicFlow.SharedKernel.csproj" />
+  </ItemGroup>
+
 </Project>
