--- a/src/AtomicFlow.Application/AtomicFlow.Application.csproj
+++ b/src/AtomicFlow.Application/AtomicFlow.Application.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\AtomicFlow.SharedKernel\AtomicFlow.SharedKernel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
+  </ItemGroup>
+
 </Project>
