--- a/src/AtomicFlow.Infrastructure/AtomicFlow.Infrastructure.csproj
+++ b/src/AtomicFlow.Infrastructure/AtomicFlow.Infrastructure.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AtomicFlow.Application\AtomicFlow.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
+  </ItemGroup>
+
 </Project>
