basic setup for azure b2c auth

--- a/src/AtomicFlow.Blazor/wwwroot/appsettings.json
+++ b/src/AtomicFlow.Blazor/wwwroot/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AzureAdB2C": {
-    "Authority": "https://aadB2CInstance.b2clogin.com/qualified.domain.name/b2c_1_susi",
-    "ClientId": "33333333-3333-3333-33333333333333333",
+    "Authority": "https://atomicflow.b2clogin.com/AtomicFlow.onmicrosoft.com/B2C_1_signupsignin",
+    "ClientId": "dd86a438-0d7b-4657-bc15-49dd8f4f023a",
     "ValidateAuthority": false
   }
 }
