--- a/blazor/AtomicFlow.Blazor/AtomicFlow.Blazor.csproj
+++ b/blazor/AtomicFlow.Blazor/AtomicFlow.Blazor.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\AtomicFlow.Blazor.Client\AtomicFlow.Blazor.Client.csproj"/>
+        <PackageReference Include="Auth0.AspNetCore.Authentication" Version="1.4.1" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.4"/>
     </ItemGroup>
 
