--- a/blazor/AtomicFlow.Blazor/appsettings.json
+++ b/blazor/AtomicFlow.Blazor/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "Auth0": {
+    "Domain": "",
+    "ClientId": "",
+    "ClientSecret": "",
+    "Audience": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
