--- a/blazor/AtomicFlow.Blazor.Client/AtomicFlow.Blazor.Client.csproj
+++ b/blazor/AtomicFlow.Blazor.Client/AtomicFlow.Blazor.Client.csproj
@@ -14,4 +14,8 @@
         <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.4" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\AtomicFlow.Contracts\AtomicFlow.Contracts.csproj" />
+    </ItemGroup>
+
 </Project>
